--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <div class="container">
     <div class="row mt-60px mb-60px">
-        <div class="col-lg-12 position-relative">
+        <div class="col-md-12 position-relative">
             <img src="images/blog-main.png" alt="" class="img-style">
             <div class="bg-gradient">
 
             </div>
             <div class="row pt-72px pb-47px">
-                <div class="col-lg-4 text-center">
+                <div class="col-md-4 text-center">
                     <h3 class="fw-bold">Try Drill Down Visuals for Free</h3>
                     <p class="blog-text">Make reports your way - these Power BI Visualizations can handle anything.</p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2">
+                <div class="col-md-5 col-md-offset-2">
                     <div class="input-group pb-15px">
                         <input type="text" class="form-control" placeholder="Your e-mail" aria-describedby="basic-addon">
                         <span class="input-group-addon" id="basic-addon">Start Free Trial</span>
