--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             </div>
             <div class="row pt-72px pb-47px">
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center mb-25">
                     <h3 class="fw-bold">Try Drill Down Visuals for Free</h3>
                     <p class="blog-text">Make reports your way - these Power BI Visualizations can handle anything.</p>
                 </div>
